--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Typing test</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<header class="masthead">
+		<h1>Test Your Typing Speed</h1>
+	</header>
+	<main class="main">
+		<article>
+			
+		</article>
 
+	</main>
 </body>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="script.js" async></script>
 </html>
