added text on index

--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
 	</header>
 	<main class="main">
 		<article>
-			
+			<p>This is a typing speed test web application</p>
+			<p>Type the text in box as exactly as below. </p>
 		</article>
+
+		<section class="test-area">
+			<div id="origin-text">
+				<p>This is the text which is needed to be typed in the box.</p>
+			</div>
+			<div class="test-wrapper">
+				<textarea name="textarea" id="test-area" cols="30" rows="10"></textarea>
+			</div>
+		</section>
 
 	</main>
 </body>
