--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 				<p>This is the text which is needed to be typed in the box.</p>
 			</div>
 			<div class="test-wrapper">
-				<textarea name="textarea" id="test-area" cols="30" rows="10"></textarea>
+				<textarea name="textarea" id="test-area" cols="30" rows="6" placeholder="Type the above text to start. Try not to make any mistakes. ">
+
+				</textarea>
+			</div>
+			<div class="meta">
+				<section id="clock">
+					<div class="timer">00:00:00</div>
+				</section>
+				<button id="reset">Start Over</button>
 			</div>
 		</section>
 
